misc work on pcus, lifecycle test, getting it to work when compiled, etc.